# vulnscan

./: README.md  pyproject.toml  scan.py  setup.py.old
vulnscan/: __main__.py  cli.py  config.py
vulnscan.egg-info/: PKG-INFO  SOURCES.txt
vulnscan/core/: crawler.py  http_client.py  scanner.py
vulnscan/detectors/: __init__.py  base.py  headers.py  sqli.py  xss.py
vulnscan/output/: console.py  html_reporter.py  json_reporter.py
vulnscan/payloads/: sqli_error.txt  xss_payloads.txt
